--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,7 @@ j2ee.server.domain=/home/joselm/dev/glassfish-4.1/glassfish/domains/domain1
 j2ee.server.home=/home/joselm/dev/glassfish-4.1/glassfish
 j2ee.server.instance=[/home/joselm/dev/glassfish-4.1/glassfish:/home/joselm/dev/glassfish-4.1/glassfish/domains/domain1]deployer:gfv3ee6:localhost:4848
 j2ee.server.middleware=/home/joselm/dev/glassfish-4.1
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=/home/joselm/.netbeans/8.0.1/build.properties
