--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=/home/miki/.netbeans/8.0.1/config/GlassFishEE6/Properties/gfv31224043785.properties
+deploy.ant.properties.file=/home/joselm/.netbeans/8.0.1/config/GlassFishEE6/Properties/gfv31109762666.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/miki/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=/home/miki/GlassFish_Server/glassfish
-j2ee.server.instance=[/home/miki/GlassFish_Server/glassfish:/home/miki/GlassFish_Server/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/home/miki/GlassFish_Server
+j2ee.server.domain=/home/joselm/dev/glassfish-4.1/glassfish/domains/domain1
+j2ee.server.home=/home/joselm/dev/glassfish-4.1/glassfish
+j2ee.server.instance=[/home/joselm/dev/glassfish-4.1/glassfish:/home/joselm/dev/glassfish-4.1/glassfish/domains/domain1]deployer:gfv3ee6:localhost:4848
+j2ee.server.middleware=/home/joselm/dev/glassfish-4.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=/home/miki/.netbeans/8.0.1/build.properties
+user.properties.file=/home/joselm/.netbeans/8.0.1/build.properties
